# MiscProgramming

./: sleeptimer.py
BrainFuck/: LICENSE  Makefile  README  bfip
BrainFuck/src/: .ycm_extra_conf.py  main.cc
DefaultOpenGL/include/: Application.h  Config.h  GameHandler.h  MathHelpers.h  UpdateInfo.h
DefaultOpenGL/src/: Application.cpp  GameHandler.cpp  MathHelpers.cpp  UpdateInfo.cpp  main.cpp
Matrix/: .gitignore  CMakeLists.txt  Readme.md
Matrix/Matrix/Shaders/: basic.frag  basic.vert  grav.frag  grav.vert
Matrix/Matrix/include/: Application.hpp  Color.hpp  Config.hpp  Demo.hpp  GameHandler.hpp  MathHelpers.h  Shader.hpp  UpdateInfo.hpp  app.h  typedefs.h
Matrix/Matrix/src/: Application.cpp  Color.cpp  Demo.cpp  Shader.cpp  UpdateInfo.cpp  main.cpp
Web/PerlinTrees/: index.html  ip1.txt  ip2.txt
Web/PerlinTrees/css/: main.css
Web/PerlinTrees/js/: drawer.js  main.js
Web/TestDraw/: .tern-project  index.html
Web/TestDraw/css/: main.css
Web/TestDraw/js/: canvas.js  target_controller.js  util.js  worker.js
algos/: .insertion_sort.cpp.un~  .sorting_base.cpp.un~
algos/sorting/: Makefile  insertion_sort.cpp  merge_sort.cpp  search.test  selection_sort.cpp  sorting  sorting.h  sorting_base.cpp  tester
algos/sorting/tests/: test2.in  test3.in
nbu/prusten/: project.cpp  ring.cpp  ring.h  zad2.cpp
passgen/: ~?
random_images/: Makefile  image.c  image.h  main.c  random_images
susi/: checker.py
tf/: .main.py.un~  main.py
weather-app-android/Weatherify/: build.gradle  gradle.properties  settings.gradle
weather-app-android/Weatherify/androidtoggleswitch/: build.gradle
weather-app-android/Weatherify/androidtoggleswitch/src/main/res/layout/: item_widget_toggle_switch.xml
weather-app-android/Weatherify/app/: build.gradle  google-services.json
weather-app-android/Weatherify/app/src/debug/res/values/: ads_config.xml
weather-app-android/Weatherify/app/src/main/: AndroidManifest.xml
weather-app-android/Weatherify/app/src/main/res/anim/: do_not_move.xml  rotation.xml
weather-app-android/Weatherify/app/src/main/res/animator/: refresh_sun_color_change_and_dive.xml  refresh_sun_rotate.xml
weather-app-android/Weatherify/app/src/main/res/color/: add_location_result_item_state.xml
weather-app-android/Weatherify/app/src/main/res/drawable/: add_location_search_bar.xml  clip_humidity.xml  clip_precipitation.xml  dark_text_click_background.xml  enable_locations_button_background.xml  favourites_swipe_item_background.xml  favourites_textfield_background.xml  layer_list_humidity.xml  layer_list_precipitation.xml  settings_section_background.xml  wind.xml  wind_animated.xml
weather-app-android/Weatherify/app/src/main/res/layout/: activity_add_location.xml  activity_enable_locations.xml  activity_favourites.xml  activity_main.xml  activity_settings.xml  favourites_item.xml  layout_add_location_empty_search.xml  layout_add_location_result_item.xml  layout_add_location_results.xml  layout_detailed_forecast.xml  layout_forecast_current.xml  (+11 more)
weather-app-android/Weatherify/gradle/wrapper/: gradle-wrapper.properties
(+146 files in other folders)
